Fix Add Padding To Align Header Icons

--- a/css/header.css
+++ b/css/header.css
@@ -111,7 +111,7 @@
 }
 
 .lang__toggle {
-    padding: 12px 12px 12px 16px;
+    padding: 13px 12px 11px 16px;
     display: flex;
     justify-content: center;
 }
@@ -165,6 +165,7 @@
     justify-content: center;
     width: 48px;
     height: 48px;
+    padding-top: 3px;
 }
 
 .burger-menu__icon .feather-menu {
