--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -179,7 +179,7 @@
     background-color: var(--grey-primary);
     border-radius: 12px;
     max-width: 40%;
-    min-width: 154px;
+    min-width: 40%;
     min-height: 116px;
 }
 
@@ -254,6 +254,7 @@
     font-style: normal;
     font-weight: 400;
     text-align: center;
+    white-space: nowrap;
 }
 
 .dish__info__specification .dish__calorie {
@@ -261,6 +262,7 @@
     font-weight: 500;
     text-align: center;
     color: var(--grey);
+    white-space: nowrap;
 }
 
 .special-menu {
